exports[`no-array-delete > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 11
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 11
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 11
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 9
        },
        "end": {
          "line": 5,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 9
        },
        "end": {
          "line": 10,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 9
        },
        "end": {
          "line": 4,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 9
        },
        "end": {
          "line": 5,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 9
        },
        "end": {
          "line": 5,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 9,
          "column": 9
        },
        "end": {
          "line": 9,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 9
        },
        "end": {
          "line": 4,
          "column": 34
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 42
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`no-array-delete > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-array-delete",
      "messageId": "noArrayDelete",
      "message": "Using the \`delete\` operator with an array expression is unsafe.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
